--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   font-family: "Poppins", sans-serif;
   color: white;
   background-image: url("https://source.unsplash.com/1920x1000/?landscape");
-  width: auto;
+  width: 3200px;
 }
 h1 .temperature {
   margin: 0;
