--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body {
   align-items: center;
   font-family: "Poppins", sans-serif;
   color: white;
-  background-image: url("https://source.unsplash.com/2048x1080/?landscape");
+  background-image: url("https://source.unsplash.com/1920x1000/?landscape");
+  background-size: cover;
 }
 h1 .temperature {
   margin: 0;
